# CalculatorJNI

./: README.md
app/: build.gradle
app/src/main/cpp/: Android.mk  CMakeLists.txt  native-lib.c
app/src/main/java/com/example/myapplication/: MainActivity.java  NativeLibrary.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
